# lisca

./: CMakeLists.txt  README.md
examples/: toy_sample.cpp
include/lisca/: FunctionFinder.h  FunctionInfo.h
scripts/: configure-build.sh
src/: FunctionFinder.cpp  main.cpp
src/detail/: ASTHelpers.h  PathUtils.h
